fixed pom.xml file